# paas-client-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  publish.yml
src/: auth.rs  lib.rs  pseudonym_service.rs  sessions.rs  transcryptor_client.rs
tests/: tests.rs
