[package]
name = "paas-client"
version = "0.8.0"
authors = [
    "Job Doesburg <job@jobdoesburg.nl>",
    "Julian van der Horst <julian.vanderhorst@ru.nl"
]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/NOLAI/paas-client-rs"
repository = "https://github.com/NOLAI/paas-client-rs"
documentation = "https://docs.rs/paas-client"
description = "PEP Authorization API Service client"
readme = "README.md"

[lib]
name = "paas_client"
path = "src/lib.rs"

[[bin]]
name = "paascli"
required-features = ["build-binary"]
path = "src/bin/paascli/main.rs"

[features]
default = ["build-binary", "browser"]
build-binary = ["clap", "openid", "url", "urlencoding", "rand", "log"]
browser = ["webbrowser", "build-binary"]

[dependencies]
paas-api = "0.3"
libpep = "^0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_core = { version = "^0.6", features = ["std"] }
reqwest = { version = "0.12.9", features = ["json"] }
clap = { version = "4.5.27", optional = true }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
base64 = "0.22.1"
async-trait = "0.1.86"
thiserror = "2.0.11"
futures = "0.3.31"

openid = { version = "0.16", optional = true }
webbrowser = { version = "1.0", optional = true }
url = { version = "2.4", optional = true }
urlencoding = { version = "2.1.3", optional = true }
rand = { version = "0.8.5", optional = true }
log = { version = "0.4.25", optional = true }

[dev-dependencies]
chrono = "0.4.39"
mockito = "0.31.0"

