[package]
name = "paas-client"
version = "0.8.2"
authors = [
    "Job Doesburg <job@jobdoesburg.nl>",
    "Julian van der Horst <julian.vanderhorst@ru.nl"
]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/NOLAI/paas-client-rs"
repository = "https://github.com/NOLAI/paas-client-rs"
documentation = "https://docs.rs/paas-client"
description = "PEP Authorization API Service client"
readme = "README.md"

[lib]
name = "paas_client"
path = "src/lib.rs"

[[bin]]
name = "paascli"
required-features = ["build-binary"]

[features]
default = ["build-binary"]
build-binary = ["clap"]

[dependencies]
paas-api = "0.3"
libpep = "^0.6.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_core = { version = "^0.6", features = ["std"] }
reqwest = { version = "0.12.15", features = ["json"] }
clap = { version = "4.5.35", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.22.1"
async-trait = "0.1.88"
thiserror = "2.0.12"
futures = "0.3.31"

[dev-dependencies]
chrono = "0.4.40"
tokio = { version = "1", features = ["full"] }
mockito = "1.7.0"

